--- a/portfolio/src/components/About/About.css
+++ b/portfolio/src/components/About/About.css
@@ -11,52 +11,84 @@
   color: var(--color-white);
   overflow: hidden;
 }
+
 .about_me {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row-reverse;
-    overflow: hidden;
-    gap: 80px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row-reverse;
+  overflow: hidden;
+  gap: 80px;
+  padding-top:8rem;
+}
+
+.about_me .right {
+  height: 100%;
+
+}
+
+.about_me .right img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about_me .left {
+  padding: 0px 60px;
+  color: #101010;
+  width: 683px;
+  height: 486px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+
+
+#about h2 {
+  font-size: 2.5rem;
+  color: #414141;
+
+}
+
+#about p {
+  font-size: 1.2rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  margin: 0 0 16px;
+  color: #797979;
+
+}
+
+@media (max-width:986px) {
+  .hero a {
+    margin-left: -20px;
   }
-  
-  .about_me .right {
-    height: 100%;
-  
-  }
-  
-  .about_me .right img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .about_me .left {
-    padding: 0px 60px;
-    color: #101010;
-    width: 683px;
-    height: 486px;
-    display: flex;
+
+  .about_me {
+    padding: 14px 45px;
     flex-direction: column;
-    justify-content: center;
-  
+    gap: 0px;
+    height: 100vh;
   }
-  
-  
-  #about h2 {
-    font-size: 2.5rem;
-    color: #414141;
-  
+
+}
+
+@media (max-width:900px) {
+  .about_me {
+    padding: 14px 45px;
   }
-  
-  #about p {
-    font-size: 1.2rem;
-    margin-top: 0;
-    margin-bottom: 1rem;
-    margin: 0 0 16px;
-    color: #797979;
-  
-  }
-  
+
+}
+@media (max-width:500px) {
+
+  .about_me .left {
+    width: 100%;
+    height: 100%;
+    padding: 30px 0px;
+}
+
+
+}
