--- a/portfolio/src/components/Header/Header.css
+++ b/portfolio/src/components/Header/Header.css
@@ -1,5 +1,3 @@
-
-
 /* header start  */
 .hero {
     position: fixed;
@@ -8,7 +6,7 @@
     color: #0a0a0a;
     overflow: hidden;
     width: 100%;
-    height: 80px;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -20,7 +18,6 @@
 
 .logo {
     font-size: 2rem;
-    text-transform: uppercase;
     font-weight: 900;
     letter-spacing: 2px;
     transition: .5s;
@@ -57,7 +54,6 @@
     top: 50%;
     transform: translate(-50%, -50%);
     cursor: pointer;
-
 }
 
 .nav-links .links {
@@ -72,11 +68,6 @@ ul li {
 
 }
 
-.hero a .active {
-    color: #0a0a0a;
-
-}
-
 .hero a {
     display: block;
     color: var(--color-white);
@@ -88,8 +79,9 @@ ul li {
     font-weight: 600;
 }
 
-.hero .active {
-    color: #151515;
+/* By default, an active class is added to a <NavLink> component when it is active so you can use CSS to style it. */
+.hero a.active {
+    color: #101010;
 }
 
 .hero a:hover {
@@ -104,125 +96,130 @@ ul li {
         width: unset;
         height: unset;
     }
-  
+
     .home-page .left {
         padding: 0;
     }
-  
-  
-  }
 
-  /* for Mobile device */
+
+}
+
+/* for Mobile device */
 
 @media (max-width:320px) {
     .logo {
-  
+
         font-size: 1.5rem;
     }
-  
-  
-  }
-  
-  
-  
-  @media (max-width:500px) {
+
+
+}
+
+
+
+@media (max-width:500px) {
     .logo {
         margin: -7px 0px 0px -7px;
-  
+
     }
-  
+
     .ham-button {
         display: flex;
         z-index: 999;
         margin: -7px 0px 0px -7px;
         font-size: 1.8rem;
     }
-  
+
     .left {
         width: 100%;
         height: 100%;
         padding: 14px 45px;
     }
-  
+
     .about_me .left {
         width: 100%;
         height: 100%;
         padding: 30px 0px;
     }
-  
-  
-  
+
+
+
     .left>h1 {
         font-size: 3.2rem;
     }
-  
+
     .left span {
         color: var(--color-parimary-dark);
         font-size: 2.8rem;
         font-weight: 200;
     }
-  
+
     p:nth-child(1) {
         font-size: 3rem;
         font-family: 'Times New Roman', Times, serif;
     }
-  
+
     .btn-gurup button {
         padding: 8px 12px;
         /* margin: 12px 0; */
         /* margin-right: 20px; */
     }
-  
-  
-  }
-  
-  
-  
-  @media (max-width:820px) {
+
+
+}
+
+
+
+@media (max-width:820px) {
     .left {
         align-items: center;
     }
-  }
-  
-  @media (max-width:986px) {
+}
+
+@media (max-width:986px) {
     .hero a {
         margin-left: -20px;
     }
-  
+
     .about_me {
         padding: 14px 45px;
         flex-direction: column;
         gap: 0px;
         height: 100vh;
     }
-  
-  }
-  
-  @media (max-width: 900px) {
-  
-  
+
+}
+
+@media (max-width: 900px) {
+
+
     .ham-button {
         display: flex;
         z-index: 999;
     }
-  
+
     .ham_menu {
         display: block;
     }
-  
+
+    /* .ham_close {
+        display: none;
+    } */
+
     .nav-links {
         display: none;
         height: 100vh;
         width: 100%;
-  
+
+
     }
-  
+
     .hero {
         padding: 1rem 1rem;
         flex-direction: column;
         align-items: flex-start;
     }
-  
+
     .nav-links ul {
         position: absolute;
         top: 25%;
@@ -231,61 +228,92 @@ ul li {
         flex-direction: column;
         width: 100%;
     }
-  
+
     .nav-links li a {
         padding: .5rem .1rem;
         font-size: 1.5rem;
         text-transform: uppercase;
         font-weight: 500;
     }
-  
-    .nav-links.active {
+
+    .nav-links.nav-active {
+        transition: all ease-in 0.8ms;
         display: block;
     }
-  
-  
-  
-  
+
+
+    /* home page style  */
+    .home-page {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .left {
+        width: 100%;
+        height: 100%;
+        padding: 14px 45px;
+        text-align: center;
+    }
+
+    .left span {
+        color: var(--color-parimary-dark);
+        /* font-size: 2.8rem; */
+        font-weight: 200;
+    }
+
+    .left p {
+        font-size: 1.5rem;
+        font-family: Tahoma, sans-serif;
+
+    }
+
+
+    p:nth-child(1) {
+        font-size: 1rem;
+        font-family: 'Times New Roman', Times, serif;
+    }
+
+
     /* about page  */
     .about_me {
         padding: 14px 45px;
     }
-  
+
     .my-works {
         padding: 25px 45px;
         flex-direction: column;
         height: 100%;
         width: 100%;
-  
+
     }
-  
+
     .project {
         padding: 14px 45px;
     }
-  
-    
+
+
     .blog-container .post-container {
         align-items: center;
         justify-content: center;
     }
-  
+
     footer p:nth-child(1) {
         text-align: center;
         margin: 0px 18px;
         font-size: 1.2rem;
     }
-  
+
     .form-container {
         flex-direction: column;
-  
+
     }
-  
+
     .my-img {
         display: none;
     }
-  
+
     .form-box {
         width: 100%;
     }
-  
-  }
+
+}
