--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -127,8 +127,7 @@ ul li {
 /* header close  */
 
 
-main start 
-.main {
+main start .main {
   width: 100%;
   height: 100%;
 }
@@ -230,34 +229,34 @@ input[type="email"] {
 @media (max-width:320px) {
   .logo {
 
-      font-size: 1.5rem;
+    font-size: 1.5rem;
   }
 
   .home-page .right {
-      width: unset;
-      height: unset;
+    width: unset;
+    height: unset;
   }
 
   .home-page .left {
-      padding: 0;
+    padding: 0;
   }
 
   .btn-gurup button {
-      width: 100%;
-      font-size: 1.5rem;
-      padding: 12px 15px;
+    width: 100%;
+    font-size: 1.5rem;
+    padding: 12px 15px;
   }
 
   .left h1:nth-of-type(1) {
-      font-size: 1.8rem;
+    font-size: 1.8rem;
   }
 
   .left p span {
-      font-size: 1.8rem;
+    font-size: 1.8rem;
   }
 
   .left h1:nth-of-type(2) {
-      font-size: 2.1rem;
+    font-size: 2.1rem;
   }
 }
 
@@ -265,50 +264,50 @@ input[type="email"] {
 
 @media (max-width:500px) {
   .logo {
-      margin: -7px 0px 0px -7px;
+    margin: -7px 0px 0px -7px;
 
   }
 
   .ham-button {
-      display: flex;
-      z-index: 999;
-      margin: -7px 0px 0px -7px;
-      font-size: 1.8rem;
+    display: flex;
+    z-index: 999;
+    margin: -7px 0px 0px -7px;
+    font-size: 1.8rem;
   }
 
   .left {
-      width: 100%;
-      height: 100%;
-      padding: 14px 45px;
+    width: 100%;
+    height: 100%;
+    padding: 14px 45px;
   }
 
   .about_me .left {
-      width: 100%;
-      height: 100%;
-      padding: 30px 0px;
+    width: 100%;
+    height: 100%;
+    padding: 30px 0px;
   }
 
 
 
   .left>h1 {
-      font-size: 3.2rem;
+    font-size: 3.2rem;
   }
 
   .left span {
-      color: var(--color-parimary-dark);
-      font-size: 2.8rem;
-      font-weight: 200;
+    color: var(--color-parimary-dark);
+    font-size: 2.8rem;
+    font-weight: 200;
   }
 
   p:nth-child(1) {
-      font-size: 3rem;
-      font-family: 'Times New Roman', Times, serif;
+    font-size: 3rem;
+    font-family: 'Times New Roman', Times, serif;
   }
 
   .btn-gurup button {
-      padding: 8px 12px;
-      /* margin: 12px 0; */
-      /* margin-right: 20px; */
+    padding: 8px 12px;
+    /* margin: 12px 0; */
+    /* margin-right: 20px; */
   }
 
 
@@ -316,22 +315,22 @@ input[type="email"] {
 
 
 
-@media (max-width:820px) {
+ @media (max-width:820px) {
   .left {
-      align-items: center;
+    align-items: center;
   }
 }
 
 @media (max-width:986px) {
   .hero a {
-      margin-left: -20px;
+    margin-left: -20px;
   }
 
   .about_me {
-      padding: 14px 45px;
-      flex-direction: column;
-      gap: 0px;
-      height: 100vh;
+    padding: 14px 45px;
+    flex-direction: column;
+    gap: 0px;
+    height: 100vh;
   }
 
 }
@@ -340,121 +339,125 @@ input[type="email"] {
 
 
   .ham-button {
-      display: flex;
-      z-index: 999;
+    display: flex;
+    z-index: 999;
   }
 
+
+
   .ham_menu {
-      display: block;
+    display: block;
+    font-size: 35px;
+    font-weight: 700;
   }
 
   .nav-links {
-      display: none;
-      height: 100vh;
-      width: 100%;
+    display: none;
+    height: 100vh;
+    width: 100%;
 
   }
 
   .hero {
-      padding: 1rem 1rem;
-      flex-direction: column;
-      align-items: flex-start;
+    padding: 1rem 1rem;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .nav-links ul {
-      position: absolute;
-      top: 25%;
-      left: 25%;
-      transform: translate(-25%, -25%);
-      flex-direction: column;
-      width: 100%;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    transform: translate(-25%, -25%);
+    flex-direction: column;
+    width: 100%;
   }
 
   .nav-links li a {
-      padding: .5rem .1rem;
-      font-size: 1.5rem;
-      text-transform: uppercase;
-      font-weight: 500;
+    padding: .5rem .1rem;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
   }
 
   .nav-links.active {
-      display: block;
+    display: block;
   }
 
 
 
   /* home page style  */
   .home-page {
-      flex-direction: column;
-      gap: 10px;
+    flex-direction: column;
+    gap: 10px;
   }
 
   .left {
-      width: 100%;
-      height: 100%;
-      padding: 14px 45px;
-      text-align: center;
+    width: 100%;
+    height: 100%;
+    padding: 14px 45px;
+    text-align: center;
   }
 
   .left span {
-      color: var(--color-parimary-dark);
-      /* font-size: 2.8rem; */
-      font-weight: 200;
+    color: var(--color-parimary-dark);
+    /* font-size: 2.8rem; */
+    font-weight: 200;
   }
 
   .left p {
-      font-size: 1.5rem;
-      font-family: Tahoma, sans-serif;
+    font-size: 1.5rem;
+    font-family: Tahoma, sans-serif;
 
   }
 
 
   p:nth-child(1) {
-      font-size: 3rem;
-      font-family: 'Times New Roman', Times, serif;
+    font-size: 1rem;
+    font-family: 'Times New Roman', Times, serif;
   }
 
 
   /* about page  */
   .about_me {
-      padding: 14px 45px;
+    padding: 14px 45px;
   }
 
   .my-works {
-      padding: 25px 45px;
-      flex-direction: column;
-      height: 100%;
-      width: 100%;
+    padding: 25px 45px;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
 
   }
 
   .project {
-      padding: 14px 45px;
+    padding: 14px 45px;
   }
 
-  
+
   .blog-container .post-container {
-      align-items: center;
-      justify-content: center;
+    align-items: center;
+    justify-content: center;
   }
 
   footer p:nth-child(1) {
-      text-align: center;
-      margin: 0px 18px;
-      font-size: 1.2rem;
+    text-align: center;
+    margin: 0px 18px;
+    font-size: 1.2rem;
   }
 
   .form-container {
-      flex-direction: column;
+    flex-direction: column;
 
   }
 
   .my-img {
-      display: none;
+    display: none;
   }
 
   .form-box {
-      width: 100%;
+    width: 100%;
   }
 
-}
+} 
