--- a/portfolio/src/components/Home/Home.css
+++ b/portfolio/src/components/Home/Home.css
@@ -1,184 +1,173 @@
-
-  
 /* home page start  */
 
 #home {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    margin-bottom: 45px;
-    padding: 120px 0 0;
-    overflow: hidden;
     background: linear-gradient(rgba(239, 35, 60, .95), rgba(239, 35, 60, .95)), url(https://demo.htmlcodex.com/1011/developer-portfolio-template/img/hero-bg.jpg);
-    overflow: hidden;
-  
-  }
-  
-.home-page {
+    padding: 80px 0 0;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.intro {
+    height: calc(100vh - 5rem);
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row-reverse;
+    margin: 0 auto;
+    max-width: 75rem;
     overflow: hidden;
-    gap: 80px;
-  }
-  
-  .home-page .right {
-    margin: 45px 0;
-    height: 311px;
-    width: 311px;
-    padding: 12px 18px;
-    color: #fff;
-    text-align: center;
-  
-  }
-  
-  .home-page .right img {
-    width: 100%;
-    height: 100%;
+    position: relative;
+    padding: 0 2rem;
+}
+
+
+.bg {
+    position: absolute;
+    top: -80px;
+    right: 0;
+    padding-top: 8rem;
     object-fit: cover;
-    border-radius: 50%;
-    border: 10px solid var(--color-border);
-    transition: .3s;
-    overflow: hidden;
-  
-  }
-  
-  .home-page .right img:hover {
+    height: 100vh;
+    z-index: 1;
+    padding: 0 -8rem;
+}
+
+/* .home-page .right img:hover {
     transform: scale(1.2);
-  }
-  
-  .home-page .left {
-    margin: 45px 0;
+} */
+
+.intro-contatnt {
+    position: absolute;
+    margin: 75px 0;
     color: #ffffff;
-    width: 550px;
-    height: 475px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .home-page .left p {
-    /* padding-top: 20px; */
-    font-size: 1.2rem;
-    margin: 0 0 15px;
-  }
-  
-  .home-page .left h1 {
-    font-size: 3rem;
-    margin: 0 0 15px;
-  }
-  
-  .home-page .left h2 {
-    margin: 0 0 15px;
-  }
-  
-  
-  .home-page .left h2 span {
-    font-size: 2rem;
-    color: white;
-    font-weight: 500;
-  }
-  
-  
-  .home-page .btn-gurup button {
-    padding: 16px 25px;
-    font-size: 14px;
-    letter-spacing: 1px;
-    border-radius: 0;
-    font-weight: 300;
+    height: 100vh;
+    width: 100vh;
+    top: 25vh;
+    z-index: 2;
+
+}
+
+.intro-contatnt p {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.57rem;
+    font-weight: 600;
+
+}
+
+.intro-contatnt h1 {
+    color: #fff;
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.intro-contatnt h2 {
+    font-size: 2.3rem;
+    color: #fff;
+    font-weight: 400;
+    margin: 5px 0;
+}
+
+
+.intro-contatnt .btn-gurup button {
     cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    margin: 25px 10px 0 0;
-    margin-right: 20px;
-    color: #0f0f0f;
-  
-  }
-  
-  .btn-gurup button:hover {
+    font-weight: 400;
+    text-transform: uppercase;
+    padding: 12px 25px;
+    font-size: 0.9rem;
+    color: #ef233c;
+    background: #fff;
+    margin-top: 22px;
+    margin-bottom: 22px;
+    border: 1px solid rgba(256, 256, 256, .5);
+
+
+}
+
+.btn-gurup button:hover {
     background-color: var(--color-bg-parimary);
     color: var(--color-white);
     /* border: 2px solid var(--color-white); */
-    border: 1.5px solid white;
-    transition: 0.3s;
-  }
+    border: 2px solid white;
+}
 
 
-  @media (max-width:320px) {
+@media (max-width : 500px) {
     .logo {
-  
         font-size: 1.5rem;
     }
-  
-    .home-page .right {
-        width: unset;
-        height: unset;
+
+    .bg {
+        left: -7rem;
+        top: -5rem;
     }
-  
-    .home-page .left {
+
+    .intro-contatnt {
+        top: 35vh;
         padding: 0;
     }
-  
+
     .btn-gurup button {
-        width: 100%;
         font-size: 1.5rem;
         padding: 12px 15px;
     }
-  
-    .left h1:nth-of-type(1) {
+
+
+    .intro-contatnt h1 {
+        font-size: 10vw;
+        font-weight: 700;
+    }
+
+
+    .intro-contatnt p span {
         font-size: 1.8rem;
     }
-  
-    .left p span {
-        font-size: 1.8rem;
+
+    .intro-contatnt h2 {
+        font-size: 10vw;
     }
-  
-    .left h1:nth-of-type(2) {
-        font-size: 2.1rem;
-    }
-  }
-  
+}
 
 
 
+@media (max-width: 900px) {
 
+    /* home page style  */
+    .bg {
+        right: -10rem;
+        top: -5rem;
+    }
 
-  @media (max-width: 900px){
-      /* home page style  */
-      .home-page {
-        flex-direction: column;
-        gap: 10px;
+    .intro-contatnt {
+        top: 35vh;
     }
-  
-    .left {
-        width: 100%;
-        height: 100%;
-        padding: 14px 45px;
-        text-align: center;
+
+    .intro-contatnt h1 {
+        font-size: 10vw;
+        font-weight: 700;
     }
-  
-    .left span {
-        color: var(--color-parimary-dark);
-        /* font-size: 2.8rem; */
-        font-weight: 200;
-    }
-  
-    .left p {
+
+    .intro-contatnt p {
         font-size: 1.5rem;
         font-family: Tahoma, sans-serif;
-  
+
     }
-  
-  
-    p:nth-child(1) {
-        font-size: 3rem;
-        font-family: 'Times New Roman', Times, serif;
+}
+
+
+@media screen and (max-width:912px) {
+    .bg {
+        left: 1rem;
     }
-  
-  
-  }
+
+    .left {
+        text-align: left;
+
+    }
+
+}
+
+
+@media screen and (max-width:1024px) {
+    .intro {
+        padding: 0 3rem;
+    }
+
+}
