--- a/my-amazon-clone/src/components/Navbar/Navbar.css
+++ b/my-amazon-clone/src/components/Navbar/Navbar.css
@@ -1,28 +1,28 @@
 header {
     width: 100%;
-    height: 80px;
-    background-color: aliceblue;
+   
+}
+nav{
+    background-color: #000000;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 25px;
     font-family: monospace;
+    overflow: hidden;
+    color: #fff;
 }
 
-header #part2 ul {
+header nav .logo{
+    height: 80px;
+}
+
+nav .logo img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+nav .left{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-}
-
-header #part2 ul li {
-    list-style: none;
-    margin-right: 30px;
-}
-
-header a {
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
-    font-weight: 700;
 }
