--- a/my-amazon-clone/src/components/Navbar/Navbar.css
+++ b/my-amazon-clone/src/components/Navbar/Navbar.css
@@ -1,28 +1,158 @@
-header {
+nav {
     width: 100%;
-   
-}
-nav{
-    background-color: #000000;
+    background-color: #131921;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-family: monospace;
     overflow: hidden;
     color: #fff;
+    height: 60px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    z-index: 99;
 }
 
-header nav .logo{
-    height: 80px;
+/* .border {
+    border: 1.5px solid transparent;
+ 
+} */
+
+nav .left .nav-logo {
+    height: 150px;
+    width: 120px;
 }
 
-nav .logo img{
+nav .left .nav-logo:hover {
+    border: 1.5px solid rgb(174, 171, 171);
+    cursor: pointer;
+}
+
+nav .left .nav-logo img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
-nav .left{
+
+nav .left {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 5px;
+ 
+}
+
+nav .left .nav-location {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .line-1 {
+    font-size: 0.79rem;
+    color: #cccccc;
+
+}
+
+nav .line-2 {
+    border: none;
+    background-color: #131921;
+    font-size: 0.9rem;
+    color: #ffffff;
+    font-weight: 700;
+}
+
+.nav-location:hover {
+    border: 1.5px solid rgb(174, 171, 171);
+    cursor: pointer;
+}
+
+nav .left .nav-location .locatin-icon {
+    margin-top: 8px;
+}
+
+nav .left .nav-location .address {
+    margin-right: 2px;
+
+}
+
+
+
+nav .nav-search {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 620px;
+}
+
+nav .nav-search select {
+    border: none;
+    font-size: 14px;
+    width: 72px;
+    height: 40px;
+    background-color: #e6e6e6;
+    color: #0f1111;
+    margin: 0 auto;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    cursor: pointer;
+
+}
+
+input[type="text"] {
+    border: none;
+    font-size: 13px;
+    width: 100%;
+    height: 40px;
+
+}
+
+nav .search-box {
+    width: 52px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3rem;
+    background-color: #F3A847;
+    color: black;
+    font-weight: 500;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    cursor: pointer;
+}
+
+nav span {
+    display: block;
+
+}
+
+nav .right {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 0px 22px;
+    gap: 20px;
+}
+
+nav .right .account-types {
+    margin: 0 auto;
+}
+nav .right .nav-cart{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ 
+}
+
+nav .right .nav-cart .icon{
+    font-size: 2.4rem;
+    font-weight: normal;
+}
+nav .right .nav-cart .cart{
+    margin-bottom: -10px;
+    font-size: 0.8rem;
+    font-weight: normal;
 }
