--- a/my-amazon-clone/src/components/ProductList/ProductList.css
+++ b/my-amazon-clone/src/components/ProductList/ProductList.css
@@ -2,7 +2,9 @@ section {
     position: relative;
     width: 100%;
     min-height: 100vh;
-    padding: 2vw 1vw;
+    margin-top: 100px;
+    padding: 0 14px;   
+    background-image: url('https://images-eu.ssl-images-amazon.com/images/G/31/img2020/fashion/WA_2020/festivehero/PCWomen3000reduced121._CB574443302_.jpg');
 
 }
 
@@ -11,16 +13,17 @@ section ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
     width: 100%;
     height: 100vh;
-    gap: 20px;
-    margin-right: 20px;
+    gap: 20px;       
+        
 }
 
 section ul .box {
     position: relative;
-    width: 31%;
-    height: 54vh;
+    width: 85vw;
+    height: 64vh;
     background-color: rgb(91, 185, 183);
     border-radius: 8px;
     display: flex;
