--- a/my-amazon-clone/src/components/ProductList/ProductList.css
+++ b/my-amazon-clone/src/components/ProductList/ProductList.css
@@ -1,14 +1,28 @@
 section {
+
     position: relative;
     width: 100%;
     min-height: 100vh;
     margin-top: 100px;
-    padding: 0 14px;   
-    background-image: url('https://images-eu.ssl-images-amazon.com/images/G/31/img2020/fashion/WA_2020/festivehero/PCWomen3000reduced121._CB574443302_.jpg');
-
+    padding: 0 14px;
+    /* background-image: url('https://images-eu.ssl-images-amazon.com/images/G/31/img2020/fashion/WA_2020/festivehero/PCWomen3000reduced121._CB574443302_.jpg'); */
 }
 
-section ul {
+.grid {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    background-color: rebeccapurple;
+    grid-template-columns: .2fr 1fr;
+}
+.grid .filter{
+    background-color: red;
+}
+.grid .product-grid{
+    background-color:#3f3f3f;
+}
+
+/* section ul {
     position: relative;
     display: flex;
     justify-content: center;
@@ -16,14 +30,14 @@ section ul {
     margin: 0 auto;
     width: 100%;
     height: 100vh;
-    gap: 20px;       
-        
-}
+    gap: 20px;
+
+} */
 
 section ul .box {
     position: relative;
-    width: 85vw;
-    height: 64vh;
+    width: 25vw;
+    height: 24vh;
     background-color: rgb(91, 185, 183);
     border-radius: 8px;
     display: flex;
