--- a/my-amazon-clone/src/components/ProductList/ProductList.css
+++ b/my-amazon-clone/src/components/ProductList/ProductList.css
@@ -9,6 +9,7 @@ section {
 }
 
 .grid {
+  
     width: 100%;
     height: 100vh;
     display: grid;
@@ -21,22 +22,22 @@ section {
 }
 
 .grid .product-grid {
+
     background-color: #3f3f3f;
 }
 
 .grid ul {
     padding: 20px;
-
     display: grid;
-    grid-template-columns: .3fr 1fr;
+    grid-template-columns: repeat(3,1fr);
     gap: 10px;
 
 }
 
-section ul .box {
+.grid ul .box {
     position: relative;
     width: 25vw;
-    height: 24vh;
+    height: 44vh;
     background-color: rgb(91, 185, 183);
     border-radius: 8px;
     display: flex;
