--- a/my-amazon-clone/src/components/ProductList/ProductList.css
+++ b/my-amazon-clone/src/components/ProductList/ProductList.css
@@ -5,63 +5,91 @@ section {
     min-height: 100vh;
     margin-top: 100px;
     padding: 0 14px;
-    /* background-image: url('https://images-eu.ssl-images-amazon.com/images/G/31/img2020/fashion/WA_2020/festivehero/PCWomen3000reduced121._CB574443302_.jpg'); */
+    color: #000;
+
 }
 
 .grid {
-  
+
     width: 100%;
     height: 100vh;
     display: grid;
-    background-color: rebeccapurple;
+    background-color: #FFFFFF;
     grid-template-columns: .2fr 1fr;
 }
 
 .grid .filter {
-    background-color: red;
+    background-color: #FFFFFF;
+
 }
 
 .grid .product-grid {
 
-    background-color: #3f3f3f;
+    background-color: #FFFFFF;
 }
 
 .grid ul {
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-
 }
 
 .grid ul .box {
     position: relative;
     width: 25vw;
-    height: 44vh;
-    background-color: rgb(91, 185, 183);
+    height: 75vh;
+    background-color: #F7F7F7;
     border-radius: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: 1rem;
 
 }
 
-section ul .box p {
+/* .grid ul .box .product-img{
+} */
+.grid ul .box .product-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.grid ul .box h3 {
+    margin-top: 10px;
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.grid ul .box .price {
+    margin-top: 8px;
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    font-size: 1.2rem;
+}
+
+.grid ul .box p {
     margin-top: 20px;
     font-weight: 600;
     color: #000;
     cursor: pointer;
+    font-size: 0.8rem;
 }
 
-section ul .box button {
-    padding: 12px 16px;
+.grid ul .box button {
+    padding: 8px 12px;
     border: none;
     outline: none;
     border-radius: 2px;
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 14px;
     font-weight: 600;
     color: #3f3f3f;
     cursor: pointer;
+    background-color: aquamarine;
 }
