ErrorPage and routing

--- a/my-amazon-clone/src/components/Navbar/Navbar.css
+++ b/my-amazon-clone/src/components/Navbar/Navbar.css
@@ -188,7 +188,7 @@ input[type="text"] {
     align-items: center;
     list-style: none;
     text-decoration: none;
-    padding: 20px;
+    padding: 0 20px;
 }
 
 a {
@@ -207,11 +207,18 @@ a {
 
 }
 
+.nav-part2 .shop-container{
+    min-width: 547px;
+}
 .nav-part2 .shop-link {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 20px;
+}
+
+.nav-part2 .shop-link li a{
+    font-size: 1rem;
+    padding: 8px 10px;
 }
 
 .nav-part2 .right {
