--- a/my-amazon-clone/src/components/ProductList/ProductList.css
+++ b/my-amazon-clone/src/components/ProductList/ProductList.css
@@ -17,6 +17,9 @@ section {
 }
 
 .grid .filter {
+    padding-bottom: 59px;
+    margin-top: 100px;
+    text-justify: justify;
     background-color: #FFFFFF;
 
 }
