--- a/my-amazon-clone/src/components/ProductDetail/SingleProduct.css
+++ b/my-amazon-clone/src/components/ProductDetail/SingleProduct.css
@@ -93,3 +93,35 @@
     margin-top: 1rem;
 
 }
+.product-grid ul .box h3 {
+    margin-top: 10px;
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.product-grid ul .box .price {
+    margin-top: 8px;
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    font-size: 1.2rem;
+}
+label{
+    padding: 12px 18px;
+}
+input{
+    padding: 4px 8px;
+    margin-left: 20px;
+    border-radius: 3px;
+    font-size: 1.2rem;
+    border: 2px solid rgb(32, 31, 31);
+}
+.same-brands{
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin-top: 30px;
+    text-align: center;
+}
+
