--- a/my-amazon-clone/src/components/ProductDetail/SingleProduct.css
+++ b/my-amazon-clone/src/components/ProductDetail/SingleProduct.css
@@ -108,10 +108,11 @@
     cursor: pointer;
     font-size: 1.2rem;
 }
-label{
+
+.filter-box label{
     padding: 12px 18px;
 }
-input{
+.filter-box input{
     padding: 4px 8px;
     margin-left: 20px;
     border-radius: 3px;
