--- a/my-amazon-clone/src/components/ProductList/ProductList.css
+++ b/my-amazon-clone/src/components/ProductList/ProductList.css
@@ -94,3 +94,24 @@ section {
     cursor: pointer;
     background-color: aquamarine;
 }
+
+/* Filter options start  */
+
+.colors {
+ display: flex;
+ align-items: center;
+ justify-content: flex-start;
+ gap: 10px;
+ padding: 15px 0;
+
+}
+.colors .box{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #3f3f3f;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 5px;
+}
