--- a/my-amazon-clone/src/components/ProductList/ProductList.css
+++ b/my-amazon-clone/src/components/ProductList/ProductList.css
@@ -96,16 +96,25 @@ section {
 }
 
 /* Filter options start  */
-
-.colors {
+.filter-page{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.filter-page h3{
+    margin-bottom: 10px;
+}
+.filter-page .price{
+    cursor: pointer;
+}
+.color-filter {
  display: flex;
- align-items: center;
- justify-content: flex-start;
+ flex-direction: column;
  gap: 10px;
  padding: 15px 0;
 
 }
-.colors .box{
+.color-filter .box{
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -114,4 +123,17 @@ section {
     align-items: center;
     justify-content: center;
     font-size: 5px;
+}
+
+.color-box {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.hover:hover{
+    color: red;
+    cursor: pointer;
 }
