--- a/my-amazon-clone/src/components/ProductList/ProductList.css
+++ b/my-amazon-clone/src/components/ProductList/ProductList.css
@@ -95,6 +95,29 @@ section {
     background-color: aquamarine;
 }
 
+/* serch products start */
+.filter-box{
+    margin: 0 auto;
+    width: 20%;
+}
+.filter-box label{
+    padding: 12px 18px;
+}
+.filter-box input{
+    padding: 4px 8px;
+    margin-left: 20px;
+    border-radius: 3px;
+    font-size: 1.2rem;
+    border: 2px solid rgb(32, 31, 31);
+}
+.same-brands{
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin-top: 30px;
+    text-align: center;
+}
+
+
 /* Filter options start  */
 .filter-page{
     display: flex;
