--- a/my-amazon-clone/src/components/Cart/Cart.css
+++ b/my-amazon-clone/src/components/Cart/Cart.css
@@ -1,3 +1,15 @@
+.cart-con {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    flex-direction: column;
+    margin-bottom: 25px;
+}
+
+
 .container {
     width: 400px;
     height: 200px;
@@ -13,7 +25,6 @@
 .container .product-img {
     width: 150px;
     height: 150px;
-
     margin: 25px auto;
     display: flex;
     align-items: center;
@@ -36,9 +47,10 @@
 }
 
 .buttons {
-    margin-left: 20px;
+    margin: 0 auto;
 }
 
 .buttons button {
     margin-left: 20px;
+    margin-bottom: 20px;
 }
