useReducer and contex, API

--- a/my-amazon-clone/src/components/Result/Result.css
+++ b/my-amazon-clone/src/components/Result/Result.css
@@ -7,19 +7,19 @@
     font-size: 23px;
 }
 
-..product-grid {
+.product-grid {
 
     background-color: #FFFFFF;
 }
 
-..product-grid  ul {
+.product-grid  ul {
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
 }
 
-..product-grid  ul .box {
+.product-grid  ul .box {
     position: relative;
     width: 25vw;
     height: 75vh;
