--- a/my-amazon-clone/src/components/Home/Home.css
+++ b/my-amazon-clone/src/components/Home/Home.css
@@ -1,8 +1,81 @@
-.home-container{
+.home-container {
     width: 100%;
     height: 600px;
     background-image: url('https://images-eu.ssl-images-amazon.com/images/G/31/img22/Wireless/devjyoti/GW/Uber/Nov/D103625178_DesktopTallHero_3000x1200._CB574597993_.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    
+
+}
+
+
+
+.product-grid {
+
+    background-color: #FFFFFF;
+}
+
+.product-grid ul {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.product-grid ul .box {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    background-color: #F7F7F7;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 1rem;
+
+}
+
+/* .product-grid  ul .box .product-img{
+} */
+.product-grid ul .box .product-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.product-grid ul .box h3 {
+    margin-top: 10px;
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.product-grid ul .box .price {
+    margin-top: 8px;
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    font-size: 1.2rem;
+}
+
+.product-grid ul .box p {
+    margin-top: 20px;
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    font-size: 0.8rem;
+}
+
+.product-grid ul .box button {
+    padding: 8px 12px;
+    border: none;
+    outline: none;
+    border-radius: 2px;
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #3f3f3f;
+    cursor: pointer;
+    background-color: aquamarine;
 }
