--- a/my-amazon-clone/src/components/Home/Home.css
+++ b/my-amazon-clone/src/components/Home/Home.css
@@ -1,46 +1,70 @@
 .home-container {
     width: 100%;
-    height: 600px;
+    height: 290px;
     background-image: url('https://images-eu.ssl-images-amazon.com/images/G/31/img22/Wireless/devjyoti/GW/Uber/Nov/D103625178_DesktopTallHero_3000x1200._CB574597993_.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 
 }
 
+.card-con {
 
-
-.product-grid {
-
-    background-color: #FFFFFF;
+    width: 100%;
+    height: 100vh;
+    background-color: #E3E6E6;
+    display: flex;
+    gap: 20px;
 }
+
+.card-con .card {
+    position: relative;
+    width: 33%;
+    height: 55vh;
+    margin: 20px;
+    background-color: red;
+}
+
+.card-con .card .box {
+    position: absolute;
+    background-color: blue;
+    height: 25vh;
+    width: 17%;
+    margin-top: 20px;
+}
+
 
 .product-grid ul {
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    background-color: #E3E6E6;
 }
 
 .product-grid ul .box {
+    background-color: #FFFFFF;
+}
+
+.product-grid ul .box .product-img {
     position: relative;
-    width: 150px;
-    height: 150px;
-    background-color: #F7F7F7;
+    width: 200px;
+    height: auto;
     border-radius: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     margin-top: 1rem;
-
 }
 
-/* .product-grid  ul .box .product-img{
-} */
+
 .product-grid ul .box .product-img img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .product-grid ul .box h3 {
