--- a/my-amazon-clone/src/components/Home/Home.css
+++ b/my-amazon-clone/src/components/Home/Home.css
@@ -19,19 +19,32 @@
 .card-con .card {
     position: relative;
     width: 33%;
-    height: 55vh;
-    margin: 20px;
-    background-color: red;
+    height: 320px;
+    margin: 10px;
+    background-color: #FFFFFF;
+}
+
+.card-con .card .boxes {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    justify-self: stretch;
 }
 
 .card-con .card .box {
-    position: absolute;
-    background-color: blue;
-    height: 25vh;
-    width: 17%;
-    margin-top: 20px;
+    position: relative;
+    background-color: #FFFFFF;
+    height: 120px;
+    width: 120px;
+    margin: 5px;
 }
-
+.box img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 
 .product-grid ul {
     padding: 20px;
