--- a/my-amazon-clone/src/components/SingleProductPage/SingleProductPage.css
+++ b/my-amazon-clone/src/components/SingleProductPage/SingleProductPage.css
@@ -1,10 +1,75 @@
-.con{
+.product-con {
+    margin-top: 0;
     width: 100%;
-    height: 100vh;
-    background-color: red;
+    min-height: 100vh;
+    color: #333;
+    background-color: #F7F7F7;
+    display: flex;
+    align-items: center;
+    justify-content:space-evenly;
 }
-.con h2{
-    padding: 20px;
-    text-align: center;
-   color: #ffffff;
+
+.product-con .box {
+    position: relative;
+    width: 25vw;
+    height: 45vh;
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
 }
+
+.product-con .box .product-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.product-con .product-des{
+    position: relative;
+    width: 45vw;
+    height: 55vh;
+    
+
+}
+.product-con .product-des h3 {
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    font-size: 2rem;
+}
+
+.product-con .product-des .price {
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    font-size: 1.8rem;
+}
+
+
+.product-con .product-des .detail {
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    font-size: 1.2rem;
+    margin-top: 20px;
+}
+
+  button {
+    padding: 8px 12px;
+    border: none;
+    outline: none;
+    border-radius: 2px;
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #3f3f3f;
+    cursor: pointer;
+    background-color: aquamarine;
+}
+
+
+
