--- a/my-amazon-clone/src/components/SingleProductPage/SingleProductPage.css
+++ b/my-amazon-clone/src/components/SingleProductPage/SingleProductPage.css
@@ -12,7 +12,7 @@
 .product-con .box {
     position: relative;
     width: 25vw;
-    height: 45vh;
+    height: 35vh;
     background-color: #FFFFFF;
     border-radius: 8px;
     display: flex;
@@ -21,7 +21,10 @@
     flex-direction: column;
 
 }
-
+.product-con .box .product-img{
+    width: 25vw;
+    height: 35vh;
+}
 .product-con .box .product-img img {
     width: 100%;
     height: 100%;
