--- a/my-amazon-clone/src/components/ProductList/ProductList.css
+++ b/my-amazon-clone/src/components/ProductList/ProductList.css
@@ -21,7 +21,16 @@ section {
     background-color: #FFFFFF;
     grid-template-columns: .2fr 1fr;
 }
-
+label {
+    font-family: sans-serif;
+    font-size: 1rem;
+    padding-right: 10px;
+  }
+  
+  select {
+    font-size: 0.9rem;
+    padding: 2px 5px;
+  }
 .grid .filter {
     padding-bottom: 59px;
     margin-top: 100px;
