--- a/counterApp/src/index.css
+++ b/counterApp/src/index.css
@@ -2,15 +2,48 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html,body{
+
+html,
+body {
     width: 100%;
     height: 100%;
 }
-body{
+
+header {
     padding: 0 120px;
+}
+
+header,
+main {
+    padding: 0 120px;
+
+}
+
+main{
+    margin-top: 85px;
+    height: 100vh;
+}
+.dark {
+    background-color: #282828;
+    color: #ffffff;
+}
+
+.header_dark {
+    background-color: #1F2020;
+    color: #ffffff;
+}
+.center{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 4rem;
+    font-weight: 800;
+    color: #1F2020;
+    opacity: 0.6;
 }
